# AIMP_RX2_Decoder_Plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: RexLegacyLoader.cpp  RexSdk.h  Rx2Decoder.cpp  Rx2Decoder.h  Rx2DecoderExtension.cpp  Rx2DecoderExtension.h  Rx2FileFormatExtension.cpp  Rx2FileFormatExtension.h  plugin.cpp  version.rc
tools/: deploy_and_restart_aimp.bat  make_plugin_zip.ps1
